fix: alignment of platform tags

--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
@@ -2398,6 +2398,7 @@ a {
     margin-top: 0;
   }
   .platform-tags--wrapper {
+    flex-basis: 100%;
     float: none;
     margin-left: -16px;
     margin-top: 8px;
